sandbox/output
OneHundredDoors.java:44: error: cannot find symbol
        return convertDoorListToIdsOfOpenedDoors();
               ^
  symbol:   method convertDoorListToIdsOfOpenedDoors()
  location: class OneHundredDoors
1 error
